                        User-Visible lbcd Changes

lbcd 3.4.2 (unreleased)

    Support getutxent and use it in preference to getutent, falling back
    on the latter only if getutxent isn't available.  Hopefully fixes
    compilation problems on Mac OS X.

lbcd 3.4.1 (2013-03-28)

    If $sysconfdir/nolbcd (/usr/local/etc/nolbcd by default) exists, force
    the weight of the default service to the maximum regardless of what
    the normal weight calculation returned.  This allows a host to be
    effectively dropped out of a load-balanced pool by touching this file.

    Document the lbcd -t test mode and fix the output to treat the results
    as unsigned numbers instead of signed numbers.

    Stop rewriting maximum weights in the lbcdclient output to -1 and
    report the actual number that will be used by clients.

    Document lbcd handling of /etc/nologin.

    Update to rra-c-util 4.8:

    * Improve POD tests.
    * Cleanly passes clang --analyze.

    Update to C TAP Harness 2.1:

    * runtests now treats the command line as a list of tests by default.
    * The full test executable path can now be passed to runtests -o.
    * Improved harness output for tests with lazy plans.
    * Improved harness output to a terminal for some abort cases.
    * Flush harness output after each test even when not on a terminal.

lbcd 3.4.0 (2012-09-20)

    Add Mac OS X port from Clif Redding.  Tested with Darwin 8.10.1 and
    Mac OS X 10.4.10, but hopefully will work with other versions.

    Update the LDAP check to do something more reasonable.  The old LDAP
    plugin probably never worked, at least with OpenLDAP.  Thanks to
    Quanah Gibson-Mount for the fixes.

    Fix the HTTP check to correctly verify that the server returns a 20x
    or 30x status code.  Previously, any status code response would have
    accidentally been considered a success.

    Fix a possible memory overwrite and security issue if there are more